# cengine

./: .gitmodules  .vimspector.json  CMakeLists.txt  README.md
cmake/: FileEmbed.cmake
include/: attr_arr.h  camera.h  cmesh.h  container.h  cubelayer.h  envmap.h  fbo.h  gbuf.h  gl_util.h  glbuf.h  glmesh.h  gltf_loader.h  gometry.h  instance.h  instancer.h  layer.h  light.h  loader_obj.h  material.h  mathc_ext.h  mesh.h  model.h  primitives.h  renderer.h  resource_handle.h  scene.h  sdl_ctx.h  shader.h  target.h  texture.h  vert.h  window.h
include/loader/: loader_gltf.h  loader_obj.h
res/models/: cube.gltf  monkey.gltf  monkey.mtl
shaders/: frag.glsl  vert.glsl
shaders/gbuf/: frag.glsl  vert.glsl
shaders/layer/: frag.glsl  frag_blurh.glsl  frag_blurv.glsl  frag_brdf_int.glsl  frag_clip.glsl  frag_cm_forward.glsl  frag_cube.glsl  frag_eqr_to_cm.glsl  frag_gamma_correct.glsl  frag_irr.glsl  frag_ref.glsl  frag_ref_copy.glsl  frag_test01.glsl  vert.glsl  vert_cm_rot.glsl  vert_quad.glsl  vert_test01.glsl
shaders/lighting/: frag_add.glsl  frag_ambient.glsl  frag_emission.glsl  frag_lighting.glsl  frag_mul.glsl  frag_shadow.glsl  frag_shadow_02.glsl  frag_skybox.glsl  geo_shadow.glsl  vert_shadow.glsl  vert_shadow02.glsl  vert_skybox.glsl  vert_ssp.glsl
src/: attr_arr.c  camera.c  cmesh.c  container.c  cubelayer.c  envmap.c  gbuf.c  gl_util.c  glbuf.c  gltf_loader.c  instance.c  instancer.c  layer.c  light.c  loader_obj.c  main.c  material.c  mathc_ext.c  mesh.c  model.c  primitives.c  renderer.c  resource_handle.c  scene.c  sdl_ctx.c  shader.c  target.c  texture.c  window.c
src/loader/: loader_gltf.c  loader_obj.c
